--- a/src/app/Project/homepage/moon/moon.component.html
+++ b/src/app/Project/homepage/moon/moon.component.html
@@ -19,8 +19,8 @@
             </button>
           </div>
 
-          <div >
-            <button class="trade">
+          <div routerLink="/swap" >
+            <button class="trade" >
               <a href="">Trade Now</a>
             </button>
           </div>
