--- a/src/app/Project/homepage/paragraph/paragraph.component.html
+++ b/src/app/Project/homepage/paragraph/paragraph.component.html
@@ -10,7 +10,7 @@
     Trade any token on BNB Smart Chain in seconds, just by connecting your wallet.
   </div>
   <div class="buttons">
-    <button class="left">Trade Now</button>
-    <button class="right">Learn</button>
+    <button class="left" routerLink="/swap">Trade Now</button>
+    <button class="right"><a href="https://docs.pancakeswap.finance/tokenomics/cake">Learn</a></button>
   </div>
 </div>
