--- a/src/app/Project/homepage/win/win.component.html
+++ b/src/app/Project/homepage/win/win.component.html
@@ -28,8 +28,8 @@
               <h1 id="value">$740 million</h1>
               <p id="bnb">in BNB won so far</p>
               <p id="last">Will BNB price rise or fall? guess correctly to win!</p>
-              <button id="pre-btn">
-                <a href="">Play</a>
+              <button id="pre-btn" routerLink="/prediction">
+                <a >Play</a>
                 <svg viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg"
                   class="sc-5a69fd5e-0 hsJxxC">
                   <path
@@ -58,7 +58,7 @@
               <p id="bnb-l">in CAKE prizes this round</p>
               <p id="last-l">Buy tickets with CAKE, win CAKE if your numbers match</p>
 
-              <button id="lot-btn">
+              <button id="lot-btn" routerLink="/prediction">
                 <a href="">Play</a>
                 <svg viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg"
                   class="sc-5a69fd5e-0 hsJxxC">
