--- a/src/app/views/activity/activity.component.html
+++ b/src/app/views/activity/activity.component.html
@@ -1,1 +1,13 @@
-<p>activity works!</p>
+<div class="container-toolbar-farms-pools d-flex center vert-center " id="top">
+
+  <div class="lottery-container d-flex column farms-container">
+    <div class="link-lottery" routerLink="/overview">Overview</div>
+  </div>
+  <div class="farms-container d-flex  column">
+    <div class="link-swap" routerLink="/collection">Collections</div>
+  </div>
+  <div class="prediction-container d-flex column ">
+    <div class="link-prediction" routerLink="/activity">Activity</div>
+  </div>
+
+</div>
