--- a/src/app/views/limit/limit.component.html
+++ b/src/app/views/limit/limit.component.html
@@ -1,1 +1,29 @@
-<p>limit works!</p>
+
+
+
+<div class="container-toolbar-farms-pools d-flex center vert-center " id="top">
+
+  <div class="farms-container d-flex  column">
+    <div class="link-swap" routerLink="/swap">Swap</div>
+  </div>
+  <div class="prediction-container d-flex column ">
+    <div class="link-prediction" routerLink="/limit">Limit</div>
+  </div>
+  <div class="lottery-container d-flex column farms-container">
+    <div class="link-lottery" routerLink="/liquidity">Liquidity</div>
+  </div>
+  <div class="farms-container d-flex  column">
+    <div class="link-swap per"> <a href="https://perp.pancakeswap.finance/en/futures/BTCUSDT">Perpetual</a>
+    </div>
+
+
+</div>
+
+
+</div>
+
+
+<div class="card">
+  <cake-card-trade></cake-card-trade>
+</div>
+
