--- a/src/app/views/lottery/lottery.component.html
+++ b/src/app/views/lottery/lottery.component.html
@@ -3,7 +3,7 @@
 
 <div class="container-toolbar-farms-pools d-flex center vert-center " id="top">
   <div class="farms-container d-flex  column">
-    <div class="link-swap" routerLink="/swap">Trading Competition</div>
+    <div class="link-swap" routerLink="/competition">Trading Competition</div>
 
   </div>
   <div class="farms-container d-flex column">
