--- a/src/app/views/prediction/prediction.component.html
+++ b/src/app/views/prediction/prediction.component.html
@@ -1,18 +1,44 @@
 
+<div class="container-toolbar-farms-pools d-flex center vert-center " id="top">
+  <div class="farms-container d-flex  column">
+    <div class="link-swap" routerLink="/competition">Trading Competition</div>
 
+  </div>
+  <div class="prediction-container d-flex column ">
+    <div class="link-prediction" routerLink="/prediction">Prediction(BETA)</div>
 
+  </div>
+  <div class="lottery-container d-flex column farms-container">
+    <div class="link-lottery" routerLink="/lottery">Lottery</div>
 
-<div class="contenitore-grande">
-<div class="container-medio">
+  </div>
+</div>
 <div class="container">
   <div class="top">
-    <cake-bnb></cake-bnb>
-    <cake-central></cake-central>
+    <div class="left">
+      <cake-bnb></cake-bnb>
+    </div>
+    <div class="mezzo">
+      <cake-central></cake-central>
+    </div>
     <div class="right">
       <cake-clockp></cake-clockp>
       <cake-cards-three></cake-cards-three>
     </div>
   </div>
+  <div class="middle">
+
+    <div class="slides">
+
+      <cake-card-own class="i"></cake-card-own>
+
+
+    <div class="later">
+      <cake-later class="i"></cake-later>
+      <cake-later class="i"></cake-later>
+    </div>
+
+    </div>
+  </div>
 </div>
-</div>
-</div>
+
