--- a/src/app/views/swap/trading-competition/finished/calc/calc.component.html
+++ b/src/app/views/swap/trading-competition/finished/calc/calc.component.html
@@ -25,7 +25,7 @@
   </div>
 
   <div class="down">
-    <a href="#" class="tw-button">
+    <a href="https://twitter.com/pancakeswap" class="tw-button">
       <span class="tw">
         <svg viewBox="0 0 18 15" color="textSubtle" font-size="12px" width="20px" xmlns="http://www.w3.org/2000/svg"
           class="sc-eaf7e66-0 hfFEwM">
