--- a/src/app/Project/homepage/moon/lottery-timer/lottery-timer.component.css
+++ b/src/app/Project/homepage/moon/lottery-timer/lottery-timer.component.css
@@ -63,7 +63,7 @@
     }
 
     #m span,#h span,#s span{
-      margin-left: -8px;
+      margin-left: -4px;
       font-size: 16px;
     }
 
@@ -178,3 +178,11 @@
   }
 
 
+.left-part button svg{
+  display: flex;
+  align-items: center;
+}
+.left-part button {
+  display: flex;
+  align-items: center;
+}
