--- a/src/app/modals/connect-popup/connect-popup.component.css
+++ b/src/app/modals/connect-popup/connect-popup.component.css
@@ -17,7 +17,21 @@
    top: 0; right: 0; bottom: 0; left: 0
 }
 
+.tot::-webkit-scrollbar {
+    width: 0px;}
 
+
+.tot::-webkit-scrollbar-thumb{
+  background:transparent;
+   width: 0;
+}
+
+
+
+.tot::-webkit-scrollbar-track {
+    background-color: transparent;
+   width: 0;
+}
 
 
 
