--- a/src/app/shared/card-trade/card-trade.component.css
+++ b/src/app/shared/card-trade/card-trade.component.css
@@ -1,19 +1,8 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Kanit, sans-serif;
-}
 
-.totalContainer {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 .insideContainer {
+  display: block;
     width: 326px;
     height: 514px;
     background: var(--navbar-color-dark);
