--- a/src/app/views/prediction/bnb/bnb.component.css
+++ b/src/app/views/prediction/bnb/bnb.component.css
@@ -42,3 +42,23 @@ height: 18px;
     width: 70px;
     margin-left: 10px;
 }
+
+
+
+
+@media  screen and (max-width: 960px ) {
+svg, .svg{
+  width: 48px;
+  height: 48px;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+      border-radius: 8px 8px 24px;
+      padding: 0px 8px 0px 24px;
+      width: auto;
+}
+}
+
