--- a/src/app/views/prediction/card-own/card-own.component.css
+++ b/src/app/views/prediction/card-own/card-own.component.css
@@ -2,10 +2,12 @@
 
 .temporary{
     display: flex;
-    gap: 50px;
+    height: 100%;
+    width: 100%;
+    gap: 20px;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+
 
 
 }
@@ -21,6 +23,9 @@
     border-radius: 24px;
     overflow: hidden;
     padding: 1px 1px 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     animation: 3s ease 0s infinite normal none running fluid;
 }
 
@@ -305,3 +310,25 @@
     fill:"#EFF4F5" ;
 }
 
+.next{
+fill: white;
+background-color: rgb(118, 69, 217);
+  color: white
+
+}
+
+
+.expired{
+  background-color:rgb(231, 227, 235);
+  color: rgb(189, 194, 196);
+  fill: rgb(189, 194, 196);
+  opacity: 0.7;
+}
+
+.expired:hover{
+opacity: 1;
+}
+
+.next > .up-cont > svg{
+  fill: rgb(189, 194, 196);;
+}
