--- a/src/app/views/prediction/card-own/card-own.component.html
+++ b/src/app/views/prediction/card-own/card-own.component.html
@@ -1,19 +1,27 @@
 <div class="temporary">
-  <div class="card-container" *ngFor="let user of users; let i = index">
+  <div class="card-container" *ngFor="let user of users; let i = index" [ngClass]="user.status === 'next' ? 'next' : user.status === 'live' ? 'live' : 'expired'">
     <div class="container-border">
 
       <!-- Live e numero index -->
-      <div class="live-container">
-        <div class="live">
-          <svg viewBox="0 0 24 24" width="24px" color="secondary" xmlns="http://www.w3.org/2000/svg"
+      <div class="live-container  " [ngClass]="user.status === 'next' ? 'next' : user.status === 'live' ? 'live' : 'expired'">
+        <div class="live " [ngClass]="user.status === 'next' ? 'next' : user.status === 'live' ? 'live' : 'expired'" >
+          <svg *ngIf="user.status === 'live' || user.status === 'next'" viewBox="0 0 24 24" width="24px" color="secondary" xmlns="http://www.w3.org/2000/svg"
             class="sc-5a69fd5e-0 kMIYAw">
             <path
               d="M9 14.7902C9 15.555 9.82366 16.0367 10.4903 15.6617L15.4505 12.8716C16.1302 12.4893 16.1302 11.5107 15.4505 11.1284L10.4903 8.33827C9.82366 7.96331 9 8.44502 9 9.20985V14.7902ZM12 2C6.48 2 2 6.48 2 12C2 17.52 6.48 22 12 22C17.52 22 22 17.52 22 12C22 6.48 17.52 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20Z">
             </path>
           </svg>
-          <p>Live</p>
+
+          <svg *ngIf="user.status === 'expired'" viewBox="0 0 24 24" width="21px" color="text" xmlns="http://www.w3.org/2000/svg" class="sc-eaf7e66-0 bLoCxR">
+            <path
+              d="M12 2C6.5 2 2 6.5 2 12C2 17.5 6.5 22 12 22C17.5 22 22 17.5 22 12C22 6.5 17.5 2 12 2ZM12 20C7.59 20 4 16.41 4 12C4 7.59 7.59 4 12 4C16.41 4 20 7.59 20 12C20 16.41 16.41 20 12 20ZM12.5 7.75C12.5 7.33579 12.1642 7 11.75 7C11.3358 7 11 7.33579 11 7.75V13L15.5537 15.8022C15.9106 16.0219 16.3781 15.9106 16.5978 15.5537C16.8192 15.1938 16.7041 14.7225 16.3419 14.5051L12.5 12.2V7.75Z">
+            </path>
+          </svg>
+          <p  *ngIf="user.status === 'live'">Live</p>
+          <div  *ngIf="user.status === 'next'">Next</div>
+          <div  *ngIf="user.status === 'expired'">Expired</div>
         </div>
-        <div class="index">#{{i + idnumber}}</div>
+        <div class="index" [ngClass]="user.status === 'next' ? 'next' : user.status === 'live' ? 'live' : 'expired'" >#{{i + idnumber}}</div>
       </div>
       <!-- Live e numero index -->
 
@@ -21,7 +29,7 @@
 
 
       <!-- Barra loading -->
-      <div class="loading-container">
+      <div class="loading-container" *ngIf="user.status === 'live'">
         <div class="load"></div>
       </div>
       <!-- Barra loading -->
@@ -34,7 +42,7 @@
       <div class="body-card-container">
         <div class="up-container">
           <div class="up-cont">
-            <svg height="65px" width="240px" viewBox="0 0 240 65" xmlns="http://www.w3.org/2000/svg">
+            <svg height="65px" *ngIf="user.status === 'live' || user.status === 'expired' " width="240px" viewBox="0 0 240 65" xmlns="http://www.w3.org/2000/svg">
               <g filter="url(#filter0_i)">
                 <path
                   d="M10.0001 49.2757L10.0003 64H234L234 49.2753C234 42.5136 229.749 36.4819 223.381 34.2077L138.48 3.8859C127.823 0.0796983 116.177 0.0796931 105.519 3.8859L20.6188 34.2076C14.2508 36.4819 10.0001 42.5138 10.0001 49.2757Z"
@@ -55,6 +63,29 @@
                 </filter>
               </defs>
             </svg>
+
+            <svg *ngIf="user.status === 'next'" height="65px" width="240px" viewBox="0 0 240 65" xmlns="http://www.w3.org/2000/svg">
+              <g filter="url(#filter0_i)">
+                <path
+                  d="M10.0001 49.2757L10.0003 64H234L234 49.2753C234 42.5136 229.749 36.4819 223.381 34.2077L138.48 3.8859C127.823 0.0796983 116.177 0.0796931 105.519 3.8859L20.6188 34.2076C14.2508 36.4819 10.0001 42.5138 10.0001 49.2757Z"
+                  fill="#EFF4F5" [ngClass]="randomValue - user.id < 0 ? 'undefined' : 'up-var' "></path>
+              </g>
+              <defs>
+                <filter id="filter0_i" x="10.0001" y="1.03125" width="224" height="62.9688" filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+                  <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"></feBlend>
+                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                    result="hardAlpha"></feColorMatrix>
+                  <feOffset></feOffset>
+                  <feGaussianBlur stdDeviation="1"></feGaussianBlur>
+                  <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"></feComposite>
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"></feColorMatrix>
+                  <feBlend mode="normal" in2="shape" result="effect1_innerShadow"></feBlend>
+                </filter>
+              </defs>
+            </svg>
+
             <div class="up-text">
               <div class="up" [ngClass]="randomValue - user.id > 0 ? 'up-var' : 'up'">Up</div>
               <div class="payout" [ngClass]="randomValue - user.id > 0 ? 'up-var' : 'payout'">
@@ -66,7 +97,7 @@
         </div>
 
 
-        <div class="body-container" [ngClass]="randomValue - user.id < 0 ? 'body-container' : 'dd'">
+        <div class="body-container" [ngClass]="randomValue - user.id < 0 ? 'body-container' : 'dd'" *ngIf="user.status === 'live' ||  user.status === 'expired'">
           <div class="body-content">
             <div class="last-price">
               Last price
@@ -110,9 +141,33 @@
         </div>
 
 
+        <cake-prize-pool *ngIf="user.status === 'next'"></cake-prize-pool>
+
         <div class="down-container">
-          <div class="up-cont">
-            <svg height="65px" width="240px" viewBox="0 0 240 65" color="text" xmlns="http://www.w3.org/2000/svg"
+          <div class="up-cont" >
+            <svg height="65px" *ngIf="user.status === 'live' || user.status === 'expired'" width="240px" viewBox="0 0 240 65" color="text" xmlns="http://www.w3.org/2000/svg"
+              class="sc-5a69fd5e-0 fIBjTm">
+              <g filter="url(#filter0_i)">
+                <path
+                  d="M10.0001 15.7243L10.0003 1H234L234 15.7247C234 22.4864 229.749 28.5181 223.381 30.7923L138.48 61.1141C127.823 64.9203 116.177 64.9203 105.519 61.1141L20.6188 30.7924C14.2508 28.5181 10.0001 22.4862 10.0001 15.7243Z"
+                  fill="#EFF4F5" [ngClass]="randomValue - user.id > 0 ? 'undefined' : 'down-var' "></path>
+              </g>
+              <defs>
+                <filter id="filter0_i" x="10.0001" y="1" width="224" height="62.9688" filterUnits="userSpaceOnUse"
+                  color-interpolation-filters="sRGB">
+                  <feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood>
+                  <feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"></feBlend>
+                  <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                    result="hardAlpha"></feColorMatrix>
+                  <feOffset></feOffset>
+                  <feGaussianBlur stdDeviation="1"></feGaussianBlur>
+                  <feComposite in2="hardAlpha" operator="arithmetic" k2="-1" k3="1"></feComposite>
+                  <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0"></feColorMatrix>
+                  <feBlend mode="normal" in2="shape" result="effect1_innerShadow"></feBlend>
+                </filter>
+              </defs>
+            </svg>
+            <svg height="65px" *ngIf="user.status === 'next'" width="240px"   viewBox="0 0 240 65" color="text" xmlns="http://www.w3.org/2000/svg"
               class="sc-5a69fd5e-0 fIBjTm">
               <g filter="url(#filter0_i)">
                 <path
