--- a/src/app/views/prediction/clockp/clockp.component.css
+++ b/src/app/views/prediction/clockp/clockp.component.css
@@ -38,3 +38,25 @@ svg{
   width: 64px;
   height: 64px;
 }
+
+
+
+@media  screen and (max-width: 960px ) {
+svg{
+  width: 48px;
+  height: 48px;
+}
+
+.container{
+  border-radius: 8px 8px 8px 24px;
+  padding: 0px 28px 0px 8px;
+}
+
+.text{
+  flex-direction: column;
+  align-items: flex-end;
+  margin-right: 15px;
+}
+
+
+}
