--- a/src/app/views/prediction/later/later.component.css
+++ b/src/app/views/prediction/later/later.component.css
@@ -1,19 +1,31 @@
+.r{
+  height: 100%;
+  width: 320px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .container-grey
 {
   width: 320px;
   margin-right: 16px;
-  height: 100%;
+  height: fit-content;
   padding: 1px 1px 3px;
   position: relative;
       background: rgb(231, 227, 235);
     border-radius: 24px;
     color: rgb(40, 13, 95);
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .container{
   width: 100%;
-    height: 100%;
+    height: fit-content;
     overflow: initial;
     background: rgb(255, 255, 255);
     border-radius: 24px;
