--- a/src/app/views/prediction/later/later.component.html
+++ b/src/app/views/prediction/later/later.component.html
@@ -1,3 +1,6 @@
+
+<div class="r">
+
 <div class="container-grey">
   <div class="container">
 
@@ -89,4 +92,6 @@
     </div>
 
   </div>
+</div>
+
 </div>
