--- a/src/app/views/swap/swap.component.html
+++ b/src/app/views/swap/swap.component.html
@@ -3,5 +3,28 @@
 
 
 
+<div class="container-toolbar-farms-pools d-flex center vert-center " id="top">
 
-<cake-trading-competition></cake-trading-competition>
+  <div class="prediction-container d-flex column ">
+    <div class="link-prediction" routerLink="/swap">Swap</div>
+  </div>
+  <div class="farms-container d-flex  column">
+    <div class="link-swap" routerLink="/limit">Limit</div>
+  </div>
+  <div class="lottery-container d-flex column farms-container">
+    <div class="link-lottery" routerLink="/liquidity">Liquidity</div>
+  </div>
+    <div class="farms-container d-flex  column">
+      <div class="link-swap per"> <a href="https://perp.pancakeswap.finance/en/futures/BTCUSDT">Perpetual</a>
+      </div>
+
+</div>
+
+
+</div>
+
+<div class="card">
+  <cake-card-trade></cake-card-trade>
+</div>
+
+
