--- a/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.html
+++ b/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.html
@@ -11,7 +11,7 @@
                 <p>ENDED</p>
             </div>
             <div class="circle-img">
-                <img src="/Pancake/src/assets/Ifo-Assets/cake-circle.png" alt="cake circle">
+                <img src="../../../../../assets/Ifo-Assets/cake-circle.png" alt="cake circle">
             </div>
         </div>
 
@@ -20,7 +20,7 @@
     <div class="main-cake">
 
         <div class="message-container">
-            <p class="message">This is the old IFO CAKE pool. 
+            <p class="message">This is the old IFO CAKE pool.
                 Check out the brand new CAKE pool to learn how to earn CAKE
                 rewards with higher APY while enjoying other benefits.
             </p>
