--- a/src/app/views/ifo/ifo-shared/ifo-cards/ifo-cards.component.html
+++ b/src/app/views/ifo/ifo-shared/ifo-cards/ifo-cards.component.html
@@ -7,7 +7,7 @@
                 <div class="nav-public">
                     <h2>Public Sale</h2>
                     <div class="img-container">
-                        <img src="/Pancake/src/assets/Ifo-Assets/punto di domanda.svg" alt="quest mark">
+                        <img src="../../../../../assets/Ifo-Assets/punto di domanda.svg" alt="quest mark">
                     </div>
                 </div>
                 <div class="main-public">
@@ -24,7 +24,7 @@
             <div class="card-private-sale">
                 <div class="nav-private">
                     <h2>Private Sale</h2>
-                    
+
                 </div>
                 <div class="main-private">
                     <div class="container-img-main">
