--- a/src/app/views/info/top-pools-table/top-pools-table.component.css
+++ b/src/app/views/info/top-pools-table/top-pools-table.component.css
@@ -58,7 +58,11 @@
     font-size: 12px;
     
 }
-
+.arrow-asc-desc{
+    position: relative;
+    bottom: 2px;
+    padding-left: .1rem;
+}
 /* TD-TABLE*/
 a{
     text-decoration: none;
