--- a/src/app/views/info/info.component.html
+++ b/src/app/views/info/info.component.html
@@ -3,9 +3,9 @@
 
  <div class="container-info">
 
-    <cake-top-tokens-table></cake-top-tokens-table>
+    <cake-top-tokens-table [titleTable]="titleTokensTable"></cake-top-tokens-table>
     <div *ngIf="topPoolsTokenParent">
-        <cake-top-pools-table [topPoolsTokenOrigin]="topPoolsTokenParent"></cake-top-pools-table>
+        <cake-top-pools-table [topPoolsTokenOrigin]="topPoolsTokenParent" [titleTable]="titlePoolsTable"></cake-top-pools-table>
     </div>
     <div *ngIf="transactionsParent">
         <cake-transactions-table [transactionsOrigin]="transactionsParent"></cake-transactions-table>
