--- a/src/app/views/info/pools/pools.component.css
+++ b/src/app/views/info/pools/pools.component.css
@@ -1,6 +1,7 @@
-.container-tokens{
+.container-pools{
     background-color: #faf9fa;
     max-width: 100%;
     margin: 0 auto;
     padding: 1.5rem;
+    
 }
