--- a/src/app/views/info/search-navigation/search-navigation.component.html
+++ b/src/app/views/info/search-navigation/search-navigation.component.html
@@ -7,9 +7,9 @@
     <!-- Navigation toggle search bar start -->
        <div class="left-navigation-item">
             <div class="container-overview-pools-tokens-toggle">
-                <a class="link switch-overview-pools-tokens ">Overview</a>
-                <a class="link ">Pools </a>
-                <a class="link" routerLink="/info/tokens">Tokens</a>
+                <a class="link " routerLink="/info/overview" routerLinkActive="switch-overview-pools-tokens">Overview</a>
+                <a class="link" routerLink="/info/pools" routerLinkActive="switch-overview-pools-tokens">Pools </a>
+                <a class="link" routerLink="/info/tokens" routerLinkActive="switch-overview-pools-tokens">Tokens</a>
             </div>
        </div>
 
