--- a/src/app/views/info/top-pools-table/top-pools-table.component.html
+++ b/src/app/views/info/top-pools-table/top-pools-table.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="wrapper-table">
-   <h2 class="title-top-tokens">Top Pools</h2>
+   <h2 class="title-top-tokens">{{titleTable}}</h2>
     <div class="container-table  d-flex column">
                 <div class="grid-container grid-header">
                 <div class="th-index d-flex">#</div>
