--- a/src/app/views/info/search-navigation/search-navigation.component.css
+++ b/src/app/views/info/search-navigation/search-navigation.component.css
@@ -16,7 +16,9 @@
      overflow: hidden;
 }
 
-
+a{
+    text-decoration: none;
+}
 
 .link{
     padding-left: 12px;
@@ -24,7 +26,7 @@
     font-weight: 600;
     color: rgb(122, 110, 170);
     border-radius: 16px;
-    padding: .5rem;  
+    padding: .6rem;  
 }
 
 
