--- a/src/app/views/info/top-tokens-table/top-tokens-table.component.html
+++ b/src/app/views/info/top-tokens-table/top-tokens-table.component.html
@@ -13,34 +13,36 @@
 
             
        
-            <div class="grid-container grid-body">
-                <div class="td-index">1</div>
+            <div class="grid-container grid-body" *ngFor="let token of allTokens, let i = index">
+                <div class="td-index">{{i + indexPage + 1}}</div>
                 <div class="td-name-img-token">
                     <div class="container-img-token d-flex vert-center">
-                        <img class="img-token" src="https://assets-cdn.trustwallet.com/blockchains/smartchain/assets/0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c/logo.png" alt="">
+                        <img class="img-token" src="{{token.image}}"  style="border-radius: 50%;" alt="">
                         <div class="cont-text-name-symbol-token d-flex vert-center">
-                            <p class="txt-name-token">Wrapped BNB</p>
-                            <p class="txt-symbol-token">(WBNB)</p>
+                            <p class="txt-name-token">{{token.name}} BNB</p>
+                            <p class="txt-symbol-token">({{token.symbol | uppercase}})</p>
                         </div>
                     </div>
                 </div>
-                <div class="td-price"><a>$308.14</a></div>
-                <div class="td-price-change"><a>1.63</a></div>
-                <div class="td-volume-24h"><a>$308.14</a></div>
-                <div class="td-liquidity"><a>$308.14</a></div> 
+                <div class="td-price"><a>${{token.current_price | numberSuffix}}</a></div>
+                <span class="arrow-txt" *ngIf="token.percentage > 35">↑</span>
+                <span class="arrow-txt" *ngIf="token.percentage < 35">↓</span>
+                <div class="td-price-change"><a>{{0 | randomPercentage}}</a></div>
+                <div class="td-volume-24h"><a>${{token.circulating_supply | numberSuffix}}</a></div>
+                <div class="td-liquidity"><a>${{token.total_volume | numberSuffix}}</a></div> 
             </div>
             
             
         
             <div class="footer-table d-flex center vert-center">
                 <div class="footer-navigation-table d-flex vert-center" >
-                    <div class="container-svg-arrow-back">
+                    <div class="container-svg-arrow-back" (click)="previousPage()" [class.back-ahead-avilable]="arrowBack">
                         <svg viewBox="0 0 24 24" color="textDisabled" width="20px" xmlns="http://www.w3.org/2000/svg" class="sc-eaf7e66-0 kcSykS">
                             <path d="M19 11H7.82998L12.71 6.12C13.1 5.73 13.1 5.09 12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7L4.70998 11.29C4.31998 11.68 4.31998 12.31 4.70998 12.7L11.3 19.29C11.69 19.68 12.32 19.68 12.71 19.29C13.1 18.9 13.1 18.27 12.71 17.88L7.82998 13H19C19.55 13 20 12.55 20 12C20 11.45 19.55 11 19 11Z"></path>
                         </svg>
                     </div>
-                    <div class="footer-page-index" >Page 1 of 8</div>
-                    <div class="container-svg-arrow-ahead">
+                    <div class="footer-page-index" >Page {{currentPage}} of {{totalPages}}</div>
+                    <div class="container-svg-arrow-ahead" (click)="nextPage()" [class.back-ahead-avilable]="arrowAhead">
                         <svg viewBox="0 0 24 24" color="primary" width="20px" xmlns="http://www.w3.org/2000/svg" class="sc-eaf7e66-0 etGTJB">
                             <path d="M5 13H16.17L11.29 17.88C10.9 18.27 10.9 18.91 11.29 19.3C11.68 19.69 12.31 19.69 12.7 19.3L19.29 12.71C19.68 12.32 19.68 11.69 19.29 11.3L12.71 4.7C12.32 4.31 11.69 4.31 11.3 4.7C10.91 5.09 10.91 5.72 11.3 6.11L16.17 11H5C4.45 11 4 11.45 4 12C4 12.55 4.45 13 5 13Z"></path>
                         </svg>
