--- a/src/app/views/info/tokens/watchlist-token/watchlist-token.component.html
+++ b/src/app/views/info/tokens/watchlist-token/watchlist-token.component.html
@@ -25,8 +25,8 @@
                     </div>
                 </div>
                 <div class="td-price"><a>${{token.current_price | numberSuffix}}</a></div>
-                <div class="td-price-change"><a>{{0 | randomPercentage}}%</a></div>
-                <div class="td-volume-24h"><a>$${{token.circulating_supply | numberSuffix}}</a></div>
+                <div class="td-price-change"><a>{{0 | randomPercentage}}</a></div>
+                <div class="td-volume-24h"><a>${{token.circulating_supply | numberSuffix}}</a></div>
                 <div class="td-liquidity"><a>${{token.total_volume | numberSuffix}}</a></div> 
             </div>
             
