update ifo page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
+<!-- <div class="nav" style="position: relative; z-index: 999; width: 100%;">
+<cake-nav-bar></cake-nav-bar>
+</div> -->
 
 <cake-ifo></cake-ifo>
 
 
-<div class="nav" style="position: relative; z-index: 999; width: 100%;">
-<cake-nav-bar></cake-nav-bar>
-</div>
 
 
-<div class="cont" style="position: relative; z-index: -2;">
+<!-- <div class="cont" style="position: relative; z-index: -2;">
  <cake-top-traders></cake-top-traders>
 <cake-prizes></cake-prizes>
 <cake-rules></cake-rules>
@@ -28,4 +28,4 @@
 <cake-earn-section></cake-earn-section>
 <cake-patata-in-seconds></cake-patata-in-seconds>
 <cake-select-bar></cake-select-bar>
-<router-outlet></router-outlet>
+<router-outlet></router-outlet> -->
