--- a/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.css
+++ b/src/app/views/ifo/ifo-shared/ifo-cake/ifo-cake.component.css
@@ -1,7 +1,7 @@
 .container-card-cake {
     max-width: 370px;
     width: 100%;
-    height: 100%;
+    height: 100% auto;
     background: rgb(255, 255, 255);
     border-radius: 24px;
     color: rgb(40, 13, 95);
@@ -178,6 +178,7 @@
 }
 
 .header-mobile {
+    max-width: 368px;
     display: flex;
     flex-flow: row;
     background: linear-gradient(111.68deg, rgb(242, 236, 242) 0%, rgb(232, 242, 246) 100%);
