--- a/src/app/views/ifo/ifo-shared/ifo-main/ifo-main.component.html
+++ b/src/app/views/ifo/ifo-shared/ifo-main/ifo-main.component.html
@@ -4,7 +4,7 @@
         <div class="container-card1" >
             
             
-            <div class="card" *ngIf="MobileView ; else mobileView"></div>
+            <div class="card-hidden" *ngIf="MobileView ; else mobileView"></div>
 
             <div class="container-num-circle">
                 <div class="container-number-circle">
@@ -13,7 +13,7 @@
                 </div>
             </div>
             
-            <div class="card">
+            <div class="card ">
                 <h3>Active your Profile</h3>
                 <p>You'll need an active PancekaSwap Profile to take part in an IFO</p>
                 <div class="container-btn">
@@ -31,7 +31,7 @@
 
         <div class="container-card1 card4"> 
 
-            <div class="card" *ngIf="MobileView ; else mobileView"></div>
+            <div class="card-hidden" *ngIf="MobileView ; else mobileView"></div>
 
             <div class="container-num-circle">
                 <div class="container-number-circle2">
@@ -62,7 +62,7 @@
 
         <div class="container-card1 ">          
 
-            <div class="card" *ngIf="MobileView ; else mobileView"></div>
+            <div class="card-hidden" *ngIf="MobileView ; else mobileView"></div>
 
             <div class="container-num-circle">
                 <div class="container-number-circle2">
@@ -89,7 +89,7 @@
 
         <div class="container-card1 card4">
 
-            <div class="card" *ngIf="MobileView ; else mobileView"></div>
+            <div class="card-hidden" *ngIf="MobileView ; else mobileView"></div>
 
             <div class="container-num-circle">
                 <div class="container-number-circle2">
@@ -99,7 +99,7 @@
                 </div>
             </div>
             
-            <div class="card">
+            <div class="card ">
                 <h3>Claim your tokens and achievement</h3>
                 <p>After the IFO sales finish, you can claim any IFO tokens that you bought, and any unspent CAKE tokens will be returned to your wallet.</p>              
             </div>
