--- a/src/app/views/ifo/ifo-shared/ifo-main/ifo-main.component.css
+++ b/src/app/views/ifo/ifo-shared/ifo-main/ifo-main.component.css
@@ -69,7 +69,7 @@
 .line {
     position: absolute;
     width: 4px;
-    height: calc(80% + 20px);
+    height: calc(100% + 80px);
     left: calc(50% - 2px);
     background-color: rgb(49, 208, 170);
     top: 48px;
@@ -215,6 +215,7 @@
     transform: rotate(45deg);
 }
 
+
 .hover-link span{
     color: #1fc7d4;
     font-weight: 600;
@@ -231,7 +232,7 @@
 @media screen and (min-width: 852px) {
 
     .none {
-       
+       display: none;
         visibility: hidden;
         margin: 4px;
     }
@@ -258,6 +259,18 @@
         max-width: 50%;
     }
 
+    .card-hidden {
+        visibility: hidden;
+        width: 100%;
+    height: 100%;
+    overflow: inherit;
+    background: rgb(255, 255, 255);
+    border-radius: 24px;
+    margin-left: 8px;
+    padding: 24px;
+    box-shadow: rgba(14, 14, 44, 0.116) 1px -1px 3px 1px inset;
+    }
+
     .line {
         height: calc(100% + 40px);
     }
@@ -269,7 +282,7 @@
     }
 
     .line4 {
-        display: none;
+        visibility: hidden;
     }
 
     .card4 {
