--- a/src/app/views/ifo/ifo.component.css
+++ b/src/app/views/ifo/ifo.component.css
@@ -11,11 +11,46 @@
     background-image: url(../../../assets/Ifo-Assets/ifo-banner-light.png);
     background-position: center top, center center;
     background-repeat: no-repeat;
-    background-size: cover 80%;
+    background-size: auto 100%;
     height: 200px;
     width: 100%;
     margin: 1rem;
     margin-bottom: 3rem;
+    position: relative;
+}
+
+.header-text {
+    position: absolute;
+    top: 100px;
+    left: 50px;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    width: 100vw;
+    align-items: center;
+    left: 0;
+    right: 0;
+}
+
+
+
+.container-text h1 {
+    font-size: 64px;
+    color: #280d5f;
+}
+.header-text p {
+    font-size: 20px;
+    color: #280d5f;
+}
+
+.container-card-info {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+}
+
+.container-main {
+    width: 100%;
 }
 
 .button button {
@@ -42,4 +77,81 @@
     background-color: rgb(122, 110, 170);
     color: rgb(255, 255, 255);
 
+}
+
+
+@media screen and (max-width: 768px) {
+
+    .ifo-cake {
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .header {
+        background-image: url(../../../assets/Ifo-Assets/ifo-banner-light.png);
+        background-position: center top, center center;
+        background-repeat: no-repeat;
+        background-size: auto 100%;
+        position: relative;
+        
+    }
+
+    .header-text h1 {
+        font-size: 40px;
+    }
+    .header-text p {
+        font-size: 16px;
+    }
+
+    .header-text {
+        width: 100%;
+        display: flex;
+        flex-flow: column;
+        justify-items: center;
+        align-items: flex-start;
+        padding: 16px;
+        top: 50px;
+        left: 0;
+        right: 0;
+        
+    }
+
+    .ifo-btn{
+        position: relative;
+        align-items: center;
+        border: 0px;
+        border-radius: 16px;
+        box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
+        cursor: pointer;
+        display: inline-flex;
+        font-family: inherit;
+        font-size: 16px;
+        font-weight: 600;
+        justify-content: center;
+        letter-spacing: 0.03em;
+        line-height: 1;
+        opacity: 1;
+        outline: 0px;
+        transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
+        height: 48px;
+        padding: 0px 24px;
+        background-color: rgb(122, 110, 170);
+        color: rgb(255, 255, 255);
+    }
+
+    .container-card-info {
+        display: flex;
+        flex-flow: column;
+        margin-top: 2rem;
+        width: 100%;
+        align-items: center;
+    }
+
+    .cake-ifo-cake {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
