--- a/src/app/views/ifo/ifo.component.html
+++ b/src/app/views/ifo/ifo.component.html
@@ -1,14 +1,23 @@
 <section class="ifo-cake">
     <div class="header"></div>
     <div class="header-text">
-        <h1>IFO: Initial Farm Offerings</h1>
+        <div class="container-text">
+            <h1>IFO: Initial Farm Offerings</h1>
         <p>Buy new tokens launching on BNB Smart Chain</p>
+        </div>
+        
         <div class="button">
-            <button>How does it work?</button>
+            <button class="ifo-btn">How does it work?</button>
         </div>
     </div>
-    <cake-ifo-cake></cake-ifo-cake>
+    <div class="container-card-info">
+    <cake-ifo-cake class="cake-ifo-cake"></cake-ifo-cake>
     <cake-ifo-cards></cake-ifo-cards>
-    <cake-ifo-main></cake-ifo-main>
+    </div>
+
+    <div class="container-main">
+        <cake-ifo-main></cake-ifo-main>
+    </div>
+    
 </section>
 
