--- a/src/app/Project/homepage/moon/lottery-timer/lottery-timer.component.html
+++ b/src/app/Project/homepage/moon/lottery-timer/lottery-timer.component.html
@@ -18,7 +18,7 @@
 
         <button >
             <a >
-                <span >Play Now</span>
+                <span >Entra Ora</span>
                 <span>
                     <svg viewBox="0 0 24 24" color="invertedContrast" width="20px" xmlns="http://www.w3.org/2000/svg"
                         class="sc-5a69fd5e-0 bdStTp">
@@ -33,8 +33,7 @@
     </div>
 
     <div class="svg-container">
-        <img  id="first" src="../../../../../assets/lottery-timer.webp" alt="">
-        <img  id="second" src="../../../../../assets/lottery-rabbit.webp" alt="">
+        <img  id="first" src="../../../../../assets/6256878.jpg" alt="">
     </div>
 </div>
 </div>
