--- a/src/app/Project/homepage/moon/moon.component.html
+++ b/src/app/Project/homepage/moon/moon.component.html
@@ -30,7 +30,7 @@
 
 
       <div class="contenitore-svg">
-        <img src="../../../../assets/bunny-homepage.webp" alt="">
+        <img src="../../../../assets/89624.png" alt="">
       </div>
 
 
