--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -113,7 +113,7 @@ a svg{
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
     height: 32px;
     padding: 0px 16px;
-    background-color: rgb(31, 199, 212);
+    background-color: #1473e6;
     color: white;
     cursor: pointer;
 }
