--- a/src/app/shared/popup-nav-bar/popup-nav-bar.component.html
+++ b/src/app/shared/popup-nav-bar/popup-nav-bar.component.html
@@ -2,8 +2,8 @@
     <!-- Immagine con il coniglio e testo -->
     <div class="popup-container">
 
-        <img class="rabbit" src="	https://pancakeswap.finance/images/decorations/phishing-warning-bunny.webp"
-            alt="coniglio che scrive">
+        <img class="rabbit"
+            >
 
         <div class="phishing-message">
             <p class="message">
