--- a/src/app/Project/homepage/moon/moon.component.css
+++ b/src/app/Project/homepage/moon/moon.component.css
@@ -41,7 +41,7 @@
 
 
  .title{
-   color:rgb(118, 69, 217) ;
+   color:  #194ee3;
    margin-bottom: 24px;
    font-size: 64px;
    line-height: 1.1;
@@ -97,12 +97,12 @@
    }
 
    .trade a{
-     color: rgb(31, 199, 212);
+     color: #1473e6;
    }
 
    .trade{
      background-color: transparent;
-    border: 2px solid rgb(31, 199, 212);
+    border: 2px solid #1473e6;
     box-shadow: none;
         height: 48px;
     padding: 0px 24px;
@@ -142,7 +142,7 @@
 }
 
 .contenitore-svg img {
-      width: 100%;
+      width: 57%;
     animation: 3.5s ease-in-out 0s infinite normal none running su;
     will-change: transform;
 }
