--- a/src/app/Project/homepage/paragraph/paragraph.component.css
+++ b/src/app/Project/homepage/paragraph/paragraph.component.css
@@ -42,7 +42,7 @@
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
     height: 48px;
     padding: 0px 24px;
-    background-color: rgb(31, 199, 212);
+    background-color: #1473e6;
     color: white;
     margin-right: 16px;
 }
@@ -72,7 +72,7 @@
 
 a
 {
-  color: rgb(31, 199, 212);
+  color: #1473e6;
   text-decoration: none;
 
 }
