--- a/src/app/Project/homepage/win/win.component.css
+++ b/src/app/Project/homepage/win/win.component.css
@@ -162,7 +162,7 @@
   box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
   cursor: pointer;
   padding: 0px 24px;
-  background-color: rgb(31, 199, 212);
+  background-color: #1473e6;
 }
 
 #pre-btn a, #lot-btn a {
