--- a/src/app/core/nav-bar/nav-bar.component.css
+++ b/src/app/core/nav-bar/nav-bar.component.css
@@ -22,6 +22,7 @@
 .container-logo-menu-left{
     display: flex;
     align-items: center;
+    padding-left: 30px;
 }
 
 .container-logo-mobile{
@@ -128,7 +129,7 @@
     transition: background-color 0.2s ease 0s, opacity 0.2s ease 0s;
     height: 32px;
     padding: 0px 16px;
-    background-color: rgb(31, 199, 212);
+    background-color: #1473e6;
     color: white;
 
 }
@@ -159,7 +160,7 @@
 .img-banny-nav-right{
     width:24px;
     height: 24px;
-    transition: transform .5s; 
+    transition: transform .5s;
 }
 .img-banny-nav-right:hover{
    transform: scale(1.3);
@@ -287,4 +288,11 @@ height: 100px;
 background-color: red;
 justify-content: center;
 align-items: center;
+}
+
+.container-logo-text{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
