--- a/src/app/shared/button-connect/button-connect.component.css
+++ b/src/app/shared/button-connect/button-connect.component.css
@@ -13,7 +13,7 @@
     outline: 0px;
     height: 48px;
     padding: 0px 24px;
-    background-color: rgb(31, 199, 212);
+    background-color: #1473e6;
     color: white;
     width: 100%;
     box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
