--- a/src/app/shared/card-trade/card-trade.component.css
+++ b/src/app/shared/card-trade/card-trade.component.css
@@ -175,7 +175,7 @@
     outline: 0px;
     height: 48px;
     padding: 0px 24px;
-    background-color: rgb(31, 199, 212);
+    background-color: #1473e6;
     color: white;
     width: 100%;
 }
